--- a/mainapp/templates/mainapp/treememo.html
+++ b/mainapp/templates/mainapp/treememo.html
@@ -2,21 +2,33 @@
 
 
 {% block sidebar %}
-<p>test</p>
+<div>
+  <ul class="list-group">
+	<li class="list-group-item" id="memo_list">リスト項目Ａ</li>
+	<li class="list-group-item">リスト項目Ｂ</li>
+	<li class="list-group-item">リスト項目Ｃ</li>
+</ul>
+</div>
 {% endblock %}
 
 {% block content %}
 <div>
   <form>
     <div class="form-group">
-      <label for="InputTextarea"></label>
-      <textarea class="form-control" id="InputTextarea" placeholder="タイトル"></textarea>
+      <label for="titleid"></label>
+      <textarea class="form-control" id="titleid" placeholder="タイトル"></textarea>
     </div>
   </form>
   <form>
     <div class="form-group">
-      <label for="InputTextarea"></label>
-      <textarea class="form-control inputmemo-extend" id="InputTextarea" placeholder="メモを入力してください"></textarea>
+      <label for="memoid"></label>
+      <textarea class="form-control inputmemo-extend" id="memoid" placeholder="メモを入力してください"></textarea>
+      <button type="submit" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true" id="saveid"></span>
+      </button>
+      <button type="submit" class="btn btn-danger" aria-label="Left Align">
+        <span class="glyphicon glyphicon-trash" aria-hidden="true" id="removeid"></span>
+      </button>
     </div>
   </form>
 </div>
