--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -58,6 +58,7 @@
     </div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/treememo.js' %}"></script>
+    <!-- <script src="{% static 'js/treememo.js' %}"></script> -->
+		<script src="{% static 'js/treememotest2.js' %}"></script>
 	</body>
 </html>
