--- a/mainapp/templates/mainapp/treememo.html
+++ b/mainapp/templates/mainapp/treememo.html
@@ -3,11 +3,9 @@
 
 {% block sidebar %}
 <div>
-  <ul class="list-group">
-	<li class="list-group-item" id="memo_list">リスト項目Ａ</li>
-	<li class="list-group-item">リスト項目Ｂ</li>
-	<li class="list-group-item">リスト項目Ｃ</li>
-</ul>
+  <ul class="list-group" id="memo_list">
+    <li class='list-group-item list-group-extend'>メモ1</li>
+  </ul>
 </div>
 {% endblock %}
 
@@ -24,10 +22,13 @@
       <label for="memoid"></label>
       <textarea class="form-control inputmemo-extend" id="memoid" placeholder="メモを入力してください"></textarea>
       <button type="submit" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true" id="saveid"></span>
+        <span class="glyphicon glyphicon-save-file" aria-hidden="true" id="saveid"></span>
       </button>
       <button type="submit" class="btn btn-danger" aria-label="Left Align">
         <span class="glyphicon glyphicon-trash" aria-hidden="true" id="removeid"></span>
+      </button>
+      <button type="submit" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true" id="plusid"></span>
       </button>
     </div>
   </form>
