finish simplest memo application

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -59,6 +59,6 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- <script src="{% static 'js/treememo.js' %}"></script> -->
-		<script src="{% static 'js/treememotest2.js' %}"></script>
+		<script src="{% static 'js/treememotest.js' %}"></script>
 	</body>
 </html>
